--- a/markdown/20210304.md
+++ b/markdown/20210304.md
@@ -1,5 +1,5 @@
 ---
-Title: 2020 Fall CP 課程
+Title: 2021 Fall CD 課程
 Date: 2021-03-04 11:00
 Category: Misc
 Tags: 2021FallCD
@@ -10,6 +10,8 @@ Author: yen
 2020 Fall 計算機程式的教學主要介紹 Python 與 Flutter 在機械設計流程中的應用.
 
 <!-- PELICAN_END_SUMMARY -->
+
+@others
 
 Python
 ----
